--- a/src/styles.css
+++ b/src/styles.css
@@ -22,6 +22,10 @@ body {
   flex-direction: column;
   padding: 8px;
 }
+.row {
+  display: flex;
+  flex-direction: row;
+}
 
 .accordion {
   list-style-type: none;
@@ -43,6 +47,12 @@ body {
   display: flex;
   background: #d1e4ff;
   padding: 8px;
+}
+
+.picture{
+  display: block;
+  max-width: 100%;
+  height: auto;
 }
 
 /* Для экранов шириной от 576px до 767px */
